# python--setup

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 4a4b4bd09916_add_admin_user.py  7752ba0e01d1_auth_models.py
app_name/: config.py  enums.py  main.py
app_name/core/: exceptions.py  logs.py  manager.py  middleware.py  types.py
app_name/core/socketio/: current.py  fastapi.py
app_name/core/swagger/: swagger.py  ui.py
app_name/cruds/auth/: token.py  user.py
app_name/filters/auth/: user.py
app_name/models/: __init__.py  base.py
app_name/models/auth/: base.py  token.py  user.py
app_name/routes/: __init__.py  default.py
app_name/routes/auth/: __init__.py  user.py
app_name/schemas/auth/: token.py  types.py  user.py
app_name/services/auth/: base.py  current.py
proj_name/: config.py  main.py
proj_name/core/: exceptions.py  manager.py  middleware.py
proj_name/core/db/: current.py
proj_name/core/socketio/: current.py  fastapi.py
proj_name/core/swagger/: swagger.py
proj_name/cruds/auth/: token.py  user.py
proj_name/filters/auth/: user.py
proj_name/models/auth/: __init__.py  base.py  token.py  user.py
proj_name/routes/: __init__.py
proj_name/routes/auth/: __init__.py  user.py
proj_name/schemas/: base.py
proj_name/schemas/auth/: token.py  user.py
proj_name/services/auth/: base.py  current.py
tests/auth/: test_jwt.py
tests/socketio/: client.py
(+31 files in other folders)
