[project]
name = "proj_name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]


[tool.black]
line-length = 79
# skip_magic_trailing_comma = true
target-version = ['py310']
include = '\.pyi?$'

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "db",
    "media",
    "logs",
    "**/.*",
    "tests"
]
autoFormatStrings = true
autoImportCompletions = true
enableSyncServer = true
diagnosticSeverityOverrides = {reportInvalidTypeForm = "warning"}
indexing = true
completeFunctionParens = true
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportArgumentType = "warning"
reportReturnType = "warning"
reportCallIssue = "none"
reportAssignmentType = "warning"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
socket = [
    "python-socketio>=5.13.0",
]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
